--- a/src/template.html
+++ b/src/template.html
@@ -1,12 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/ico" href="./assets/favicon.ico">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/ico" href="./assets/favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/642cf5630c.js"
+      crossorigin="anonymous"
+    ></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
-</head>
-<body>
+  </head>
+  <body>
     <div id="content"></div>
-</body>
+  </body>
 </html>
